--- a/workstation.yaml
+++ b/workstation.yaml
@@ -28,6 +28,7 @@
           - simple-scan
           - firefox-langpacks
           - firefox
+          - malcontent-control
         state: absent
 
     - name: Upgrade packages
