add tasks tweaking gnome settings

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -82,3 +82,5 @@
         dest: "/home/{{username}}/.zshrc"
     
     - import_tasks: tasks/setup-passwordless-sudo.yaml
+
+    - import_tasks: tasks/gnome-settings.yaml
