fix misplaced python3-psutil installation

--- a/workstation.yaml
+++ b/workstation.yaml
@@ -52,6 +52,7 @@
           - timeshift
           - gparted
           - fira-code-fonts
+          - python3-psutil
 
     - name: Install flatpaks
       community.general.flatpak:
