--- a/roles/setup_fedora/tasks/packages/install-docker.yaml
+++ b/roles/setup_fedora/tasks/packages/install-docker.yaml
@@ -1,15 +1,21 @@
 ---
 # https://code.visualstudio.com/docs/setup/linux#_rhel-fedora-and-centos-based-distributions
 
+- name: Get current user
+  ansible.builtin.set_fact:
+    setup_fedora_username: "{{ lookup('env', 'USER') }}"
+
 - name: Add docker repository
-  yum_repository:
+  become: true
+  ansible.builtin.yum_repository:
     name: docker
     description: Docker CE Stable
     baseurl: https://download.docker.com/linux/fedora/$releasever/$basearch/stable
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://download.docker.com/linux/fedora/gpg
 
 - name: Install docker engine
+  become: true
   ansible.builtin.dnf:
     name:
       - docker-ce
@@ -18,13 +24,15 @@
       - docker-buildx-plugin
       - docker-compose-plugin
 
-- name: Add {{username}} to docker group
+- name: Docker group for {{ setup_fedora_username }}
+  become: true
   ansible.builtin.user:
-    name: "{{username}}"
+    name: "{{ setup_fedora_username }}"
     groups: docker
-    append: yes
+    append: true
 
 - name: Start docker daemon
+  become: true
   ansible.builtin.service:
     name: "docker"
     enabled: true
