--- a/roles/setup_fedora/tasks/packages/install-mullvad.yaml
+++ b/roles/setup_fedora/tasks/packages/install-mullvad.yaml
@@ -1,14 +1,16 @@
 ---
-#https://mullvad.net/en/download/vpn/linux
+# https://mullvad.net/en/download/vpn/linux
 
 - name: Add Mullvad repository
-  yum_repository:
+  become: true
+  ansible.builtin.yum_repository:
     name: mullvad
     description: Mullvad VPN
     baseurl: https://repository.mullvad.net/rpm/stable/$basearch
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://repository.mullvad.net/rpm/mullvad-keyring.asc
 
 - name: Install Mullvad
+  become: true
   ansible.builtin.dnf:
     name: mullvad-vpn
