--- a/roles/setup_fedora/tasks/packages/install-vscode.yaml
+++ b/roles/setup_fedora/tasks/packages/install-vscode.yaml
@@ -2,13 +2,15 @@
 # https://code.visualstudio.com/docs/setup/linux#_rhel-fedora-and-centos-based-distributions
 
 - name: Add VS Code repository
-  yum_repository:
+  become: true
+  ansible.builtin.yum_repository:
     name: vscode
     description: Visual Studio Code
     baseurl: https://packages.microsoft.com/yumrepos/vscode
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://packages.microsoft.com/keys/microsoft.asc
 
 - name: Install VS Code
+  become: true
   ansible.builtin.dnf:
     name: code
