--- a/workstation.yaml
+++ b/workstation.yaml
@@ -1,88 +1,7 @@
 ---
-- name: Setup
+- name: Setup Fedora Workstation edition
   hosts: all
-  become: true
   tasks:
-    - name: Get current user
-      set_fact:
-        username: "{{ lookup('env', 'USER') }}"
-
-    - name: Remove packages
-      ansible.builtin.dnf:
-        name:
-          - anaconda-webui
-          - gnome-tour
-          - yelp
-          - rhythmbox
-          - gnome-weather
-          - gnome-contacts
-          - gnome-calendar
-          - gnome-clocks
-          - gnome-maps
-          - gnome-characters
-          - mediawriter
-          - totem
-          - abrt-desktop
-          - abrt-gui
-          - gnome-abrt
-          - simple-scan
-          - firefox-langpacks
-          - firefox
-          - malcontent-control
-        state: absent
-
-    - name: Upgrade packages
-      ansible.builtin.dnf:
-        name: "*"
-        state: latest
-
-    - name: Install packages
-      ansible.builtin.dnf:
-        name:
-          - curl
-          - wget
-          - git
-          - tmux
-          - ncdu
-          - tree
-          - zsh
-          - bat
-          - syncthing
-          - gnome-tweaks
-          - timeshift
-          - gparted
-          - fira-code-fonts
-          - python3-psutil
-
-    - name: Install flatpaks
-      community.general.flatpak:
-        name:
-          - org.freefilesync.FreeFileSync
-          - org.gimp.GIMP
-          - md.obsidian.Obsidian
-          - org.videolan.VLC
-          - com.mattjakeman.ExtensionManager
-          - com.brave.Browser
-          - org.inkscape.Inkscape
-          - com.bitwarden.desktop
-          - com.mattjakeman.ExtensionManager
-
-    - name: Install external packages
-      include_tasks: "tasks/packages/install-{{ item }}.yaml"
-      loop:
-        - docker
-        - vscode
-        - mullvad
-        - tailscale
-
-    - import_tasks: tasks/setup-zsh.yaml
-
-    - name: Write .zshrc
-      copy:
-        src: "templates/workstation.zshrc"
-        dest: "/home/{{username}}/.zshrc"
-    
-    - import_tasks: tasks/setup-passwordless-sudo.yaml
-
-    - import_tasks: tasks/gnome-settings.yaml
-      become: false
+    - name: Run role setup_fedora_workstation
+      ansible.builtin.include_role:
+        name: setup_fedora_workstation
