--- a/roles/setup_fedora_workstation/tasks/main.yaml
+++ b/roles/setup_fedora_workstation/tasks/main.yaml
@@ -7,7 +7,7 @@
   become: true
   ansible.builtin.dnf:
     name:
-      - anaconda-webui
+      - anaconda-live
       - gnome-tour
       - yelp
       - rhythmbox
