--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,5 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: ansible-galaxy collection install community.general
       - uses: ansible/ansible-lint@main
+        with:
+          requirements_file: requirements.yaml
