feat: replace vscode with vscodium

--- a/roles/setup_fedora_workstation/tasks/main.yaml
+++ b/roles/setup_fedora_workstation/tasks/main.yaml
@@ -63,7 +63,7 @@
     tasks_from: "packages/install-{{ item }}.yaml"
   loop:
     - docker
-    - vscode
+    - vscodium
     - mullvad
     - tailscale
 
